<resources>
    <string name="app_name">Nocturne</string>

    <string name="now">Now Playing</string>
    <string name="recent">Recents</string>
    <string name="library">Library</string>
    <string name="artists">Artists</string>
    <string name="radio">Radio</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">what?</string>
    <string name="navigation_drawer_close">why?</string>
    <string name="double_back_to_exit">Please click BACK again to exit</string>
</resources>