<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.xenon.nocturne.ui.recent.RecentFragment"
        android:label="@string/now_playing"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.xenon.nocturne.ui.now_playing.NowPlayingFragment"
        android:label="@string/recent"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.xenon.nocturne.ui.library.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_artists"
        android:name="com.xenon.nocturne.ui.artists.ArtistsFragment"
        android:label="@string/artists"
        tools:layout="@layout/fragment_artists" />

    <fragment
        android:id="@+id/nav_radio"
        android:name="com.xenon.nocturne.ui.radio.RadioFragment"
        android:label="@string/radio"
        tools:layout="@layout/fragment_radio" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.xenon.nocturne.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>